--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
   s31.638-47.49,14-69c-8.615-10.506-19.829-1.669-26,7.667c-3.619,5.474-4.667,12.667-4.667,12.667S160.637,12.315,150,29.333
   c-5,8-5.667,45.333,19.333,57C213.574,106.979,295.928,102.42,319,88"/>
     </svg>
+</div>
+    <div scr="love">Love</div>
+    <script src='https://cdn.jsdelivr.net/mojs/0.265.6/mo.min.js'></script>
+    <script src="script.js"></script>
     <h1>We not celebrate Fucking Valentine</h1>
     <p>This fucking event just for fucking an old man with a under 18 girl who kill many people.Wait fell like two us but no in a criminal like that?</p>
     <p>Whatever that,I just want to say i love you</p>
     <p>THANKYOU MY GIRL</p>
     <h3>Nekko</h3>
-</div>
 </body>
 </html>
